; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_svg-device.c_svg_dev_stroke_path.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_svg-device.c_svg_dev_stroke_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@.str = private unnamed_addr constant [6 x i8] c"<path\00", align 1
@fz_identity = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"/>\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*, i32, i32*, float*, float, i32)* @svg_dev_stroke_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @svg_dev_stroke_path(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32* %5, float* %6, float %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca float*, align 8
  %17 = alloca float, align 4
  %18 = alloca i32, align 4
  %19 = alloca %struct.TYPE_6__*, align 8
  %20 = alloca i32*, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store float* %6, float** %16, align 8
  store float %7, float* %17, align 4
  store i32 %8, i32* %18, align 4
  %21 = load i32*, i32** %11, align 8
  %22 = bitcast i32* %21 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %22, %struct.TYPE_6__** %19, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  store i32* %25, i32** %20, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = load i32*, i32** %20, align 8
  %28 = call i32 @fz_write_printf(i32* %26, i32* %27, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %29 = load i32*, i32** %10, align 8
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %31 = load i32, i32* %14, align 4
  %32 = call i32 @svg_dev_ctm(i32* %29, %struct.TYPE_6__* %30, i32 %31)
  %33 = load i32*, i32** %10, align 8
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %35 = load i32*, i32** %13, align 8
  %36 = load i32, i32* @fz_identity, align 4
  %37 = call i32 @svg_dev_stroke_state(i32* %33, %struct.TYPE_6__* %34, i32* %35, i32 %36)
  %38 = load i32*, i32** %10, align 8
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %40 = load i32*, i32** %15, align 8
  %41 = load float*, float** %16, align 8
  %42 = load float, float* %17, align 4
  %43 = load i32, i32* %18, align 4
  %44 = call i32 @svg_dev_stroke_color(i32* %38, %struct.TYPE_6__* %39, i32* %40, float* %41, float %42, i32 %43)
  %45 = load i32*, i32** %10, align 8
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %47 = load i32*, i32** %12, align 8
  %48 = call i32 @svg_dev_path(i32* %45, %struct.TYPE_6__* %46, i32* %47)
  %49 = load i32*, i32** %10, align 8
  %50 = load i32*, i32** %20, align 8
  %51 = call i32 @fz_write_printf(i32* %49, i32* %50, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fz_write_printf(i32*, i32*, i8*) #1

declare dso_local i32 @svg_dev_ctm(i32*, %struct.TYPE_6__*, i32) #1

declare dso_local i32 @svg_dev_stroke_state(i32*, %struct.TYPE_6__*, i32*, i32) #1

declare dso_local i32 @svg_dev_stroke_color(i32*, %struct.TYPE_6__*, i32*, float*, float, i32) #1

declare dso_local i32 @svg_dev_path(i32*, %struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
